-
Bug
-
Resolution: Done
-
P2: Important
-
5.11, 5.12.0
-
Ubuntu 16.04, Windows
-
16836da1ae44c11317b9861764ea55cce39eac02 (qt/qtquickcontrols2/5.12)
import QtQuick 2.7 import QtQuick.Controls 2.3 ApplicationWindow { visible: true width: 500 height: 500 Dialog { id: dialog title: qsTr("Choose a size for the image") visible: true } }
Stack trace:
1 QQmlAbstractBinding::printBindingLoopError qqmlabstractbinding.cpp 194 0x7ffff765db39 2 QQmlBinding::update qqmlbinding.cpp 154 0x7ffff7665d10 3 QQmlBinding::expressionChanged qqmlbinding.cpp 483 0x7ffff7666b4e 4 QQmlJavaScriptExpressionGuard_callback qqmljavascriptexpression.cpp 500 0x7ffff765b71d 5 QQmlNotifier::emitNotify qqmlnotifier.cpp 106 0x7ffff762f988 6 QQmlData::signalEmitted qqmlengine.cpp 856 0x7ffff75c1290 7 QMetaObject::activate qobject.cpp 3647 0x7ffff707d28d 8 QMetaObject::activate qobject.cpp 3631 0x7ffff707dbbb 9 QQuickItem::implicitWidthChanged moc_qquickitem.cpp 1189 0x7fffea04d2aa 10 QQuickItemPrivate::implicitWidthChanged qquickitem.cpp 6565 0x7fffea05bf37 11 QQuickItem::setImplicitSize qquickitem.cpp 6786 0x7fffea0520a4 12 QQuickTextPrivate::setupTextLayout qquicktext.cpp 889 0x7fffea0bd92d 13 QQuickTextPrivate::updateSize qquicktext.cpp 393 0x7fffea0bef83 14 QQuickTextPrivate::getImplicitWidth qquicktext.cpp 142 0x7fffea0bf760 15 QQuickItem::implicitWidth qquickitem.cpp 6578 0x7fffea051b66 16 QQuickImplicitSizeItem::qt_static_metacall moc_qquickimplicitsizeitem_p.cpp 80 0x7fffea120f43 17 QQmlPropertyData::readPropertyWithArgs qqmlpropertycache_p.h 333 0x7ffff757c552 18 QQmlPropertyData::readProperty qqmlpropertycache_p.h 327 0x7ffff7575dd4 19 loadProperty qv4qobjectwrapper.cpp 136 0x7ffff7575dd4 20 QV4::QObjectWrapper::getProperty qv4qobjectwrapper.cpp 262 0x7ffff757692c 21 QV4::QObjectWrapper::getQmlProperty qv4qobjectwrapper.cpp 327 0x7ffff757741f 22 QV4::QObjectWrapper::get qv4qobjectwrapper.cpp 686 0x7ffff7577490 23 QV4::Object::get qv4object_p.h 364 0x7ffff759e695 24 QV4::Runtime::method_loadProperty qv4runtime.cpp 728 0x7ffff759e695 25 QV4::Moth::VME::exec qv4vme_moth.cpp 720 0x7ffff758b5a2 26 QV4::Moth::VME::exec qv4vme_moth_p.h 72 0x7ffff765c8f2 27 QV4::Function::call qv4function_p.h 72 0x7ffff765c8f2 28 QQmlJavaScriptExpression::evaluate qqmljavascriptexpression.cpp 229 0x7ffff765c8f2 29 QQmlJavaScriptExpression::evaluate qqmljavascriptexpression.cpp 190 0x7ffff765d0fd 30 QQmlNonbindingBinding::doUpdate qqmlbinding.cpp 206 0x7ffff76695a3 31 QQmlBinding::update qqmlbinding.cpp 168 0x7ffff76669cc 32 QQmlBinding::expressionChanged qqmlbinding.cpp 483 0x7ffff7666b4e 33 QQmlJavaScriptExpressionGuard_callback qqmljavascriptexpression.cpp 500 0x7ffff765b71d 34 QQmlNotifier::emitNotify qqmlnotifier.cpp 106 0x7ffff762f988 35 QQmlData::signalEmitted qqmlengine.cpp 856 0x7ffff75c1290 36 QMetaObject::activate qobject.cpp 3647 0x7ffff707d28d 37 QMetaObject::activate qobject.cpp 3631 0x7ffff707dbbb 38 QQuickItem::visibleChanged moc_qquickitem.cpp 1135 0x7fffea04d18a 39 QQuickItemPrivate::setEffectiveVisibleRecur qquickitem.cpp 5928 0x7fffea05ce4a 40 QQuickItemPrivate::setEffectiveVisibleRecur qquickitem.cpp 5919 0x7fffea05ccf1 41 QQuickItemPrivate::setVisible qquickitem.cpp 5822 0x7fffea05cede 42 QQuickItem::setVisible qquickitem.cpp 5830 0x7fffea050726 43 QQuickPopupPrivate::prepareEnterTransition qquickpopup.cpp 439 0x7fffe9d5d506 44 QQuickPopupTransitionManager::transitionEnter qquickpopup.cpp 719 0x7fffe9d5a64a 45 QQuickPopup::componentComplete qquickpopup.cpp 2125 0x7fffe9d5dc2b 46 QQmlObjectCreator::finalize qqmlobjectcreator.cpp 1319 0x7ffff7677edc 47 QQmlComponentPrivate::complete qqmlcomponent.cpp 921 0x7ffff75d855d 48 QQmlComponentPrivate::completeCreate qqmlcomponent.cpp 957 0x7ffff75d8681 49 QQmlComponent::completeCreate qqmlcomponent.cpp 950 0x7ffff75d872f 50 QQmlComponent::create qqmlcomponent.cpp 776 0x7ffff75d84b2 51 QQmlApplicationEnginePrivate::finishLoad qqmlapplicationengine.cpp 134 0x7ffff766b904 52 QQmlApplicationEnginePrivate::startLoad qqmlapplicationengine.cpp 118 0x7ffff766bb07 53 QQmlApplicationEngine::load qqmlapplicationengine.cpp 259 0x7ffff766bbce 54 main main.cpp 28 0x401d07
- relates to
-
QTBUG-64174 Overriding Dialog's contentItem with a ColumnLayout that contains one item breaks DialogButtonBox's layouting
-
- Closed
-
For Gerrit Dashboard: QTBUG-66494 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
253727,2 | Page: fix binding loop | 5.12 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |