Page: fix binding loop

When Dialog (which derives from Page) has only its title set,
there'd be a binding loop. A simplified version of the call stack:

- QQuickPopup::componentComplete
  - QQuickPopupPrivate::prepareEnterTransition
    - QQuickItem::setVisible
      - QQuickPagePrivate::itemVisibilityChanged
        - QQuickDialog::implicitHeaderWidthChanged
          - QQmlBinding::expressionChanged <== Dialog.qml's implicitWidth binding
            - QQmlPropertyData::readProperty
              - QQuickDialog::implicitHeaderWidth
                - QQuickPage::implicitHeaderWidth
                  - QQuickItem::implicitWidth <== QQuickPagePrivate::header, aka Label
                    - QQuickTextPrivate::getImplicitWidth
                      - QQuickTextPrivate::updateSize
                        - QQuickTextPrivate::setupTextLayout
                          - QQuickItem::setImplicitSize
                            - QQuickItemPrivate::implicitWidthChanged
                              - QQuickPagePrivate::itemImplicitWidthChanged
                                - QQuickDialog::implicitHeaderWidthChanged
                                  - QQmlBinding::expressionChanged
                                    - QQmlAbstractBinding::printBindingLoopError

Fix the issue by not emitting change signals if we're already in the
process of doing so.

Change-Id: I37d6fa35b1e70420e436c0e001f55035d7630542
Fixes: QTBUG-66494
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>